--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
    <hr size="2">
    <h3> Education history </h3>
   <ul>
-  <li> Majoring Chinese culture in Catholic university </li>
-  <li>Second Majoring Internationlity in Cathilic university</li>
+  <li> Majoring Chinese culture in Catholic university,Korea </li>
+  <li>Second Majoring Internationlity in Cathilic university .korea</li>
   <li>study abroad for English in Kaplan institue ,los angelas ,CA </li>
   <li>UI /UX design & Publisher course in himedia institue (8,2020~ 2,2021)</li>
   </ul>
@@ -87,5 +87,7 @@
   </tbody>
 
 </table>
+<hr size="2">
+<a href="info.html">LOGIN</a>
   </body>
 </html>
